fix up styles to not cause overflow

--- a/site/src/components/layout.module.scss
+++ b/site/src/components/layout.module.scss
@@ -15,23 +15,6 @@
   }
 }
 
-.pageWrapper {
-  margin-left: calc(var(--horiz-padding-eqt));
-  margin-right: calc(var(--horiz-padding-eqt));
-
-  /*
-  @media only screen {
-    @media (max-width: 700px) {
-      padding: 12px;
-    }
-    @media (min-width: 700px) {
-      padding: 1in;
-      padding-top: 22px;
-    }
-  }
-  */
-}
-
 html, body {
   margin: 0;
   font-family: "Helvetica", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
